# qgis-plugin-gsi-vt-downloader

./: .gitignore  README.md  __init__.py  metadata.txt  plugin.py  pyproject.toml  settings.py  vtdownloader.py
.github/workflows/: release.yaml  test.yaml
processing_provider/: gsi_vt_dl_algorithm.py  gsi_vt_dl_provider.py
tests/: __init__.py  test_dialog.py  test_sub_dialog.py
ui/: dialog.py  sub_dialog.py  sub_dialog.ui
